[metadata]
name = epiwrap-Waz0x
version = 0.0.1
author = Waz0x
author_email = remy.noulin@epitech.eu
description = A local wrapper for the epitech intranet
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Waz0x/EpiWrap
project_urls =
    Bug Tracker = https://github.com/Waz0x/EpiWrap/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src